--- a/Memories.html
+++ b/Memories.html
@@ -44,9 +44,8 @@
             <div class="ly-box12">
                 <div class="ly-txt14">
                     <p>愿你想要的都能得到，得到的都是美好</p>
-                    <p>得到的都是美好</p>
                     <p>你是我的小众喜好</p>
-                    <p>，藏着时欣喜不已，炫耀时格外骄傲</p>
+                    <p>藏着时欣喜不已，炫耀时格外骄傲</p>
                     <p>炫耀时格外骄傲</p>
                 </div>
             </div>
