--- a/Memories.html
+++ b/Memories.html
@@ -20,7 +20,7 @@
                     <p class="ly-stxt02">从早上起床快乐到晚上进被窝</p>
                     <p class="ly-stxt03">                       </p>
                     <p class="ly-stxt04">永远做公主，梦都被满足</p>
-                    <p class="ly-stxt05">梦都被满足</p>
+                    <p class="ly-stxt05"></p>
                 </div>
             </div>
         </div>
@@ -46,7 +46,7 @@
                     <p>愿你想要的都能得到，得到的都是美好</p>
                     <p>你是我的小众喜好</p>
                     <p>藏着时欣喜不已，炫耀时格外骄傲</p>
-                    <p>炫耀时格外骄傲</p>
+                    <p></p>
                 </div>
             </div>
             <div class="ly-triangle12"></div>
